--- a/docs/src/main/asciidoc/deploying-to-google-cloud.adoc
+++ b/docs/src/main/asciidoc/deploying-to-google-cloud.adoc
@@ -35,8 +35,8 @@ Google CloudSQL managed service allows 4 kinds of connection :
 . Using Cloud SQL Proxy
 . Using service account
 
-The first two don't need anymore details, simply connect to you database following the link:datasource.adoc[datasource guide].
-The third allows you to connect as if locally, but is not available for AppEngine or CloudRun where you only deploy one artefact.
+The first two don't need anymore details, simply connect to your database following the link:datasource.adoc[datasource guide].
+The third allows you to connect as if locally, but is not available for AppEngine or CloudRun where you only deploy one artifact.
 Please check link:https://cloud.google.com/sql/docs/postgres/external-connection-methods?hl=en[Connection options for external applications].
 
 This guide will help you through the fourth possibility : connecting using service account.
@@ -90,7 +90,7 @@ quarkus.datasource.socket-factory=com.google.cloud.sql.postgres.SocketFactory
 quarkus.datasource.additional-jdbc-properties=cloud-sql-instance=project:zone:db-name
 --
 
-Prefere the use of environment variables that will allow you to connect to all your env depending on your runtime values
+NOTE: To set the environment variables(DB_NAME, DB_USER, DB_PASSWORD) when deploying to CloudRun there is an option  `ADD VARIABLE`
 
 WARNING: Don't forget to add your service account key to the deployed image, and to accept requests on the expected port
 
