Synchronize docs with changes in quickstarts

--- a/docs/src/main/asciidoc/rest-client-multipart.adoc
+++ b/docs/src/main/asciidoc/rest-client-multipart.adoc
@@ -175,6 +175,7 @@ Open the `src/main/java/org/acme/restclient/multipart/MultipartClientResource.ja
 package org.acme.restclient.multipart;
 
 import java.io.ByteArrayInputStream;
+import java.nio.charset.StandardCharsets;
 
 import javax.inject.Inject;
 import javax.ws.rs.POST;
@@ -197,7 +198,7 @@ public class MultipartClientResource {
     public String sendFile() throws Exception {
         MultipartBody body = new MultipartBody();
         body.fileName = "greeting.txt";
-        body.file = new ByteArrayInputStream("HELLO WORLD".getBytes());
+        body.file = new ByteArrayInputStream("HELLO WORLD".getBytes(StandardCharsets.UTF_8));
         return service.sendMultipartData(body);
     }
 }
