--- a/docs/src/main/asciidoc/security-keycloak-authorization.adoc
+++ b/docs/src/main/asciidoc/security-keycloak-authorization.adoc
@@ -109,7 +109,7 @@ public class UsersResource {
         return new User(identity);
     }
 
-    public class User {
+    public static class User {
 
         private final String userName;
 
