--- a/docs/src/main/asciidoc/spring-data-jpa.adoc
+++ b/docs/src/main/asciidoc/spring-data-jpa.adoc
@@ -302,7 +302,7 @@ class FruitResourceTest {
                 );
 
         //Create a new Fruit
-        String idOfNewFruit = given()
+        given()
                 .when().post("/fruits/name/Orange/color/Orange")
                 .then()
                 .statusCode(200)
