--- a/docs/src/main/asciidoc/lifecycle.adoc
+++ b/docs/src/main/asciidoc/lifecycle.adoc
@@ -145,3 +145,14 @@ then the mode will be `DEVELOPMENT`, if you are running a JUnit test it will be 
 
 Your application can get the launch mode by injecting the `io.quarkus.runtime.LaunchMode` enum into a CDI bean,
 or by invoking the static method `io.quarkus.runtime.LaunchMode.current()`.
+
+== Graceful Shutdown
+
+Quarkus includes support for graceful shutdown, this allows Quarkus to wait for running requests to finish, up
+till a set timeout. By default this is disabled, however you can configure this by setting the `quarkus.shutdown.timeout`
+config property. When this is set shutdown will not happen until all running requests have completed, or until
+this timeout has elapsed. This config property is a duration, and can be set using the standard
+`java.time.Duration` format, if only a number is specified it is interpreted as seconds.
+
+Extensions that accept requests need to add support for this on an individual basis. At the moment only the
+HTTP extension supports this, so shutdown may still happen when messaging requests are active.
