--- a/docs/src/main/asciidoc/vertx.adoc
+++ b/docs/src/main/asciidoc/vertx.adoc
@@ -87,6 +87,12 @@ quarkus:
     prefer-native-transport: true
 ----
 
+If all is well quarkus will log:
+
+----
+[io.qua.ver.cor.run.VertxCoreRecorder] (main) Vertx has Native Transport Enabled: true
+----
+
 === Native Linux Transport
 
 On Linux you can enable the following socket options:
@@ -655,7 +661,7 @@ public void init(@Observes StartupEvent e, Vertx vertx, Instance<AbstractVerticl
 == Listening to a Unix Domain Socket
 
 Listening on a unix domain socket allows us to dispense with the overhead of TCP
-if the connection to the server is established from the same host. This can happen
+if the connection to the quarkus service is established from the same host. This can happen
 if access to the service goes through a proxy which is often the case
 if you're setting up a service mesh with a proxy like Envoy.
 
@@ -665,14 +671,15 @@ To setup please enable the appropriate <<native-transport>> and set the followin
 environment property:
 
 ----
-quarkus.http.domain-socket=/var/run/quarkus-http.socket
+quarkus.http.domain-socket=/var/run/io.quarkus.app.socket
+quarkus.http.domain-socket-enabled=true
 ----
 
 By itself this will not disable the tcp socket which by default will open on
-`0.0.0.0:8080`. You can disable it by leaving the following environment property empty:
+`0.0.0.0:8080`. It can be explicitly disabled:
 
 ----
-quarkus.http.host=
+quarkus.http.host-enabled=false
 ----
 
 These properties can be set through Java's `-D` command line parameter or
