--- a/docs/src/main/asciidoc/amazon-lambda.adoc
+++ b/docs/src/main/asciidoc/amazon-lambda.adoc
@@ -247,3 +247,9 @@ The native image can also be locally tested using the `sam.native.yaml` template
 ----
 sam local invoke --template sam.native.yaml --event {json test file}
 ----
+
+== Tracing with AWS XRay and GraalVM
+
+If you are building native images, and want to use https://aws.amazon.com/xray[AWS X-Ray Tracing] with your lambda
+you will need to include `quarkus-amazon-lambda-xray` as a dependency in your pom.  The AWS X-Ray
+library is not fully compatible with GraalVM so we had to do some integration work to make this work.
