--- a/docs/src/main/asciidoc/kafka.adoc
+++ b/docs/src/main/asciidoc/kafka.adoc
@@ -319,8 +319,8 @@ For this, you can use an `Emitter`.
 
 [source, java]
 ----
-import io.smallrye.reactive.messaging.annotations.Channel;
-import io.smallrye.reactive.messaging.annotations.Emitter;
+import org.eclipse.microprofile.reactive.messaging.Channel;
+import org.eclipse.microprofile.reactive.messaging.Emitter;
 
 import javax.inject.Inject;
 import javax.ws.rs.POST;
@@ -343,6 +343,18 @@ public class PriceResource {
 
 NOTE: The `Emitter` configuration is done the same way as the other stream configuration used by `@Incoming` and `@Outgoing`.
 In addition, you can use `@OnOverflow` to configure back-pressure strategy.
+
+[NOTE]
+.Deprecation
+====
+The `io.smallrye.reactive.messaging.annotations.Emitter`, `io.smallrye.reactive.messaging.annotations.Channel` and `io.smallrye.reactive.messaging.annotations.OnOverflow` classes are now deprecated and replaced by:
+
+* `org.eclipse.microprofile.reactive.messaging.Emitter`
+* `org.eclipse.microprofile.reactive.messaging.Channel`
+* `org.eclipse.microprofile.reactive.messaging.OnOverflow`
+
+The new `Emitter.send` method returns a `CompletionStage` completed when the produced message is acknowledged.
+====
 
 == Kafka Health Check
 
